<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SnapAndSearch</string>
    <!-- activities -->
    <string name="app_result_activity_name">Search Results</string>
    <string name="take_picture_bt_text">Snap</string>
    <string name="image_description">Image from camera</string>
    <string name="app_settings_activity_name">Settings</string>

    <!-- menu strings -->
    <string name="menu_item_version">Version</string>
    <string name="menu_item_settings">Settings</string>

    <!-- Strings related to Settings -->
    <string name="pref_category_service">Search Service</string>
    <string name="pref_test_service_summary">Test - no actual search will be performed.</string>
    <string name="pref_test_service_title">Test</string>
    <string name="pref_bing_service_summary">Microsoft Bing Vision</string>
    <string name="pref_bing_service_title">Bing</string>
    <string name="pref_justvisual_service_summary">JustVisual</string>
    <string name="pref_justvisual_service_title">JustVisual</string>
</resources>